--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,9 @@
   font-weight: normal;
   font-style: normal;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 main {
   font-family: Oswald;
   height: fit-content;
