--- a/app/globals.css
+++ b/app/globals.css
@@ -20,11 +20,19 @@
   url("https://db.onlinewebfonts.com/t/7cc6719bd5f0310be3150ba33418e72e.svg#Comic Sans MS")format("svg");
 }
 html{
+  height: 100%;
   scroll-behavior: smooth;
+}
+body{
+  height: 100%;
+
 }
 main {
   font-family: Oswald;
   /* font-family: "Comic Sans MS"; */
-  height: fit-content;
+  height: 100%;
   background: #bcf;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
 }
