--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ body{
 main {
   font-family: Oswald;
   /* font-family: "Comic Sans MS"; */
-  height: 100%;
+  min-height: 100%;
   background: #bcf;
   display: flex;
   flex-direction: column;
