--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@ main {
 } */
 /* Apply the background to the body or html */
 html, body {
-  background: #bcf;
+  background: #ff8000;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -46,10 +46,10 @@ html, body {
 /* Styling for the main element */
 main {
   font-family: Oswald;
-  max-height: 100vh;   /* Ensures main takes up at least the full screen */
+  height: 100vh;   /* Ensures main takes up at least the full screen */
   overflow-y: scroll;
   overflow-x: hidden;
-  background:  linear-gradient(#aabbfff0,#2020fff0), url('/images/DeTAPattern.png') repeat center fixed;
+  background:  linear-gradient(#ffd030f0,#ff3000f0), url('/images/DeTAPattern.png') repeat center fixed;
   background-size: 20vh;
   display: flex;
   flex-direction: column;
